<resources>
    <!-- Login Details-->
    <string name="app_name">Journal App</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="to_register">Yet to register?</string>
    <string name="journal_app"></string>
    <string name="password">Password</string>
    <string name="username_email">Username/email</string>
    <string name="login">Login</string>
    <!-- Form Details-->
    <string name="first_name">First name</string>
    <string name="full_name">Full name</string>
    <string name="form_email">Email</string>
    <string name="form_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="registration">REGISTRATION</string>
    <string name="button">Submit</string>
    <!--Forgotten Password Form-->
    <string name="forgotten_passowrd_email_here">Type email here</string>
    <string name="forgotten_password_button">Send Password</string>
    <string name="header_forgot_password">Forgot Password</string>
    <string name="title_activity_view">Journals</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Journal</string>
    <string name="nav_header_subtitle">myjournal@android.com</string>
    <string name="nav_header_desc">Pen your thoughts</string>
    <string name="action_settings">Settings</string>
    <string name="your_notes_here">Type your notes here...</string>
</resources>
