<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/journo_bg">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTransparencyseventy"
        tools:context=".PasswordActivity">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_forgot_password"
            android:layout_width="@dimen/et_SizeWidth"
            android:layout_height="@dimen/et_SizeHeight"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="208dp"
            android:drawableLeft="@drawable/icons_email_30"
            android:drawableStart="@drawable/icons_email_30"
            android:ems="10"
            android:hint="@string/forgotten_passowrd_email_here"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="@dimen/et_textSize"
            app:backgroundTint="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.537"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/forgot_pass_button"
            android:layout_width="@dimen/buttonSizeWidth"
            android:layout_height="@dimen/buttonSizeHeight"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccent"
            android:text="@string/forgotten_password_button"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/button_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_forgot_password"
            app:layout_constraintTop_toBottomOf="@+id/et_forgot_password" />

        <TextView
            android:id="@+id/header_password"
            android:layout_width="179dp"
            android:layout_height="33dp"
            android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="40dp"
            android:text="@string/header_forgot_password"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/tv_textSizeHeader"
            app:layout_constraintStart_toStartOf="@+id/et_forgot_password"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>